# research.LCAT.public

./: .gitattributes  .gitignore  LICENSE  README.md  package.json
.github/workflows/: versioning.yml
client/: .eslintrc.cjs  .prettierignore  index.html  package.json  vite.config.js
client/src/: App.jsx  index.css  main.jsx
client/src/components/: CookieConsent.jsx
client/src/components/adaptations/: AdaptationCategories.js  AdaptationGrid.jsx  CoastalFilter.jsx  Reference.jsx  StaticAdaptation.css  StaticAdaptation.jsx  StaticAdaptations.jsx  StaticReferences.css  StaticReferences.jsx
client/src/components/climateHazard/: ClimateHazardData.jsx  ClimateHazardRisk.css  ClimateHazardRisk.jsx
client/src/components/climateImpacts/: ClimateImpactSummary.jsx  ClimateImpactSummaryData.jsx  KumuImpactPathway.jsx
client/src/components/climateMap/: ClimateMap.css  ClimateMap.jsx  GeoJSONLoader.jsx
client/src/components/climatePrediction/: ClimateSettings.jsx  ClimateSummary.jsx  (+2 more)
client/src/core/: climate.js  climatejust.js
client/src/images/: decrease.jsx
client/src/utils/: decile.js  defaultState.js  geojson.js  utils.js
data/: README.md  build  pyproject.toml
data/builder/: cache_climate.py  chessscape.py  climate_db.py  db.py  hierarchy.py  link_geom_climate.py  link_geom_lsoa.py  tiff_loader.py  ukcri.py
data/examples/: build_db.ipynb  process_kumu_and_references.ipynb
data/scripts/: build_all.sh  build_boundaries.sh
data/src/: __init__.py  boundary_details.py  boundary_loader.py  cache_climate.py  chessscape_averages_loader.py  chessscape_loader.py  coastal_identifier.py  db_manager.py  db_plotter.py  grid_loader.py  overlap_calculator.py  process_kumu.py  process_references.py  reference_loader.py  scrape_doi.py
docs/: 1-install.md  1-lcat-theory.md  2-build-database.md  2-database-build.md  3-install.md  3-sources.md  4-sources.md
server/: .eslintrc.cjs  .prettierignore  app.js  eslint.config.mjs  package.json
server/routes/: api.js
(+76 files in other folders)
