[tool.poetry]
name = "research.lcat.public.data"
version = "0.1.0"
description = "Climate data analysis module"
authors = ["Simon Kirby <s.kirby@exeter.ac.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
geojson = "^3.1.0"
psycopg2 = "^2.9.9"
netcdf4 = "^1.6.5"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
matplotlib = "^3.9.1"
cartopy = "^0.23.0"
xarray = "^2024.6.0"
xmltodict = "^0.13.0"
boto3 = "^1.34.153"
python-dotenv = "^1.0.1"
geopandas = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"

[tool.ruff]
extend-exclude = ["*.ipynb", "tests/*"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # Pyflakes
  "I", # isort
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "SIM", # flake8-simplify
  "PD", # pandas-vet
  "W", # pycodestyle
  "ANN", # flake8-annotations
  "ASYNC", #flake8-async
  "A", # flake8-builtins
  "C4", # flake8-comprehensions
  "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  "PT", # flake8-pytest-style
  "RET", # flake8-return
  "ARG", # flake8-unused-arguments
  "PD", # pandas-vet
  "R", # refactor
  "W", # warnings
  "PERF", #perflint
  "RUF", # ruff
]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
